@@ -26,7 +26,7 @@
 # Run this on master node.
 usage="Usage: start-hbase.sh"
 
-bin=`dirname "$0"`
+bin=`dirname "${BASH_SOURCE-$0}"`
 bin=`cd "$bin">/dev/null; pwd`
 
 . "$bin"/hbase-config.sh
