@@ -24,7 +24,7 @@
 
 # Stop hadoop hbase daemons.  Run this on master node.
 
-bin=`dirname "$0"`
+bin=`dirname "${BASH_SOURCE-$0}"`
 bin=`cd "$bin">/dev/null; pwd`
 
 . "$bin"/hbase-config.sh
